--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,11 @@ version: '3.8'
 services:
   postgres:
     image: postgres:latest
-    container_name: postgres
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    restart: unless-stopped
-
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "5050:80"
-    depends_on:
-      - postgres
-    restart: unless-stopped
-
-volumes:
-  postgres_data:
+    volumes:
+      - ./db/init-multiple-db.sql:/docker-entrypoint-initdb.d/init-multiple-db.sql
