--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,9 @@ services:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
     ports:
-      - "5432:5432"
-    # volumes:
-    #   - pgdata:/var/lib/postgresql/data
-      # - ./db/init-multiple-db.sql:/docker-entrypoint-initdb.d/init-multiple-db.sql
+      - "5433:5432"
+    volumes:
+      - ./volume/postgres:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U myuser -d sa_user"]
       interval: 3s
@@ -31,5 +30,4 @@ services:
 networks:
   default:
     driver: bridge
-volumes:
-  pgdata:
+
