feat: implement DoctorLogin functionality, add request and response DTOs, update user service and routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
 
 networks:
   default:
